--- a/src/public/views/devices.ejs
+++ b/src/public/views/devices.ejs
@@ -1,10 +1,25 @@
-<a href="/">Home</a></li>
-<table table border="1">
-   <tr>
-      <th>Nickname</th><th>Type</th><th>OS</th><th>Version</th><th>Status</th>
-   </tr>
-
-   <% for (var i = 0; i < devices.length;  i++) { %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <% include partials/head %>
+</head>
+<body>
+<% include partials/menu %>
+<div class="container-fluid bg-3 text-center">
+  <h3><%= page %></h3><br>
+  <div class="row">
+    <table class="table table-bordered">
+  <thead>
+    <tr>
+      <th scope="col">Nickname</th>
+      <th scope="col">Type</th>
+      <th scope="col">OS</th>
+      <th scope="col">Version</th>
+      <th scope="col">Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% for (var i = 0; i < devices.length;  i++) { %>
     <tr>
       <td><%= devices[i].nickname %></td>
       <td><%= devices[i].type %></td>
@@ -13,4 +28,10 @@
       <td><%= devices[i].status %></td>
     </tr>
    <% } %>
+  </tbody>
 </table>
+  </div>
+</div>
+</body>
+<% include partials/script %>
+</html>
