Added options to return devices

--- a/src/public/views/partials/menu.ejs
+++ b/src/public/views/partials/menu.ejs
@@ -11,7 +11,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li id="device_list"><a href="/devices">List Device</a></li>
+        <li id="borrowed_device_list"><a href="/devices/borrowed">List Borrowed Device</a></li>
         <li id="add_device"><a href="/devices/add">Add Device</a></li>
+        <li id="borrow_device"><a href="/devices/borrow">Borrow Device</a></li>
+        <li id="return_device"><a href="/devices/return">Return Device</a></li>
         <li id="librarians"><a href="/users">Librarians</a></li>
         <li id="add_librarian"><a href="/users/add">Add new librarian</a></li>
       </ul>
