Added device rent history

--- a/src/public/views/partials/menu.ejs
+++ b/src/public/views/partials/menu.ejs
@@ -15,6 +15,7 @@
         <li id="add_device"><a href="/devices/add">Add Device</a></li>
         <li id="borrow_device"><a href="/devices/borrow">Borrow Device</a></li>
         <li id="return_device"><a href="/devices/return">Return Device</a></li>
+        <li id="borrow_history"><a href="/devices/borrow-history">Borrow History</a></li>
         <li id="librarians"><a href="/users">Librarians</a></li>
         <li id="add_librarian"><a href="/users/add">Add new librarian</a></li>
       </ul>
