Added remove user feature

--- a/src/public/views/partials/menu.ejs
+++ b/src/public/views/partials/menu.ejs
@@ -18,6 +18,7 @@
         <li id="borrow_history"><a href="/devices/borrow-history">Borrow History</a></li>
         <li id="librarians"><a href="/users">Librarians</a></li>
         <li id="add_librarian"><a href="/users/add">Add new librarian</a></li>
+        <li id="remove_librarian"><a href="/users/delete">Remove librarian</a></li>
       </ul>
     </div>
   </div>
