--- a/src/views/partials/menu.ejs
+++ b/src/views/partials/menu.ejs
@@ -1,25 +1,32 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <a class="navbar-brand" href="#">LOGO</a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li id="device_list"><a href="/devices">Devices</a></li>
-        <li id="borrowed_device_list"><a href="/devices/borrowed">Borrowed Devices</a></li>
-        <li id="add_device"><a href="/devices/add">Add Device</a></li>
-        <li id="borrow_device"><a href="/devices/borrow">Borrow Device</a></li>
-        <li id="return_device"><a href="/devices/return">Return Device</a></li>
-        <li id="borrow_history"><a href="/devices/borrow-history">Borrow History</a></li>
-        <li id="librarians"><a href="/users">Librarians</a></li>
-        <li id="add_librarian"><a href="/users/add">Add new librarian</a></li>
-        <li id="remove_librarian"><a href="/users/delete">Remove librarian</a></li>
-      </ul>
+    <div class="btn-group btn-group-justified">
+      <div class="btn-group">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+          Devices <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu">
+          <li id="device_list"><a href="/devices">Devices</a></li>
+          <li id="borrowed_device_list"><a href="/devices/borrowed">Borrowed Devices</a></li>
+          <li id="add_device"><a href="/devices/add">Add Device</a></li>
+          <li id="borrow_device"><a href="/devices/borrow">Borrow Device</a></li>
+          <li id="return_device"><a href="/devices/return">Return Device</a></li>
+          <li id="borrow_history"><a href="/devices/borrow-history">Borrow History</a></li>
+        </ul>
+      </div>
+      <div class="btn-group">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+          Librarians <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu">
+          <li id="librarians"><a href="/users">Librarians</a></li>
+          <li id="add_librarian"><a href="/users/add">Add new librarian</a></li>
+          <li id="remove_librarian"><a href="/users/delete">Remove librarian</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
