--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
 <% include partials/menu %>
-<div class="container-fluid bg-3 text-center">
+<div class="container bg-3 text-center">
   <h3><%= page %></h3><br>
   <div class="row">
     <h> Welcome to QA device library!</h>
