Added text alignment on table header

--- a/src/views/borrowHistory.ejs
+++ b/src/views/borrowHistory.ejs
@@ -11,11 +11,11 @@
     <table class="table table-bordered">
   <thead>
     <tr>
-      <th scope="col">Nickname</th>
-      <th scope="col">Return Authoriser</th>
-      <th scope="col">Last Borrower's Email</th>
-      <th scope="col">Return Date</th>
-      <th scope="col">Current Status</th>
+      <th class="text-center" scope="col">Nickname</th>
+      <th class="text-center" scope="col">Return Authoriser</th>
+      <th class="text-center" scope="col">Last Borrower's Email</th>
+      <th class="text-center" scope="col">Return Date</th>
+      <th class="text-center" scope="col">Current Status</th>
     </tr>
   </thead>
   <tbody>
