--- a/src/views/borrowedDevices.ejs
+++ b/src/views/borrowedDevices.ejs
@@ -11,13 +11,13 @@
     <table class="table table-bordered">
   <thead>
     <tr>
-      <th scope="col">Nickname</th>
-      <th scope="col">Type</th>
-      <th scope="col">OS</th>
-      <th scope="col">Version</th>
-      <th scope="col">Authorizer</th>
-      <th scope="col">Borrower Email</th>
-      <th scope="col">Borrowed Date</th>
+      <th class="text-center" scope="col">Nickname</th>
+      <th class="text-center" scope="col">Type</th>
+      <th class="text-center" scope="col">OS</th>
+      <th class="text-center" scope="col">Version</th>
+      <th class="text-center" scope="col">Authorizer</th>
+      <th class="text-center" scope="col">Borrower Email</th>
+      <th class="text-center" scope="col">Borrowed Date</th>
     </tr>
   </thead>
   <tbody>
