--- a/src/views/devices.ejs
+++ b/src/views/devices.ejs
@@ -11,11 +11,11 @@
     <table class="table table-bordered">
   <thead>
     <tr>
-      <th scope="col">Nickname</th>
-      <th scope="col">Type</th>
-      <th scope="col">OS</th>
-      <th scope="col">Version</th>
-      <th scope="col">Status</th>
+      <th class="text-center" scope="col">Nickname</th>
+      <th class="text-center" scope="col">Type</th>
+      <th class="text-center" scope="col">OS</th>
+      <th class="text-center" scope="col">Version</th>
+      <th class="text-center" scope="col">Status</th>
     </tr>
   </thead>
   <tbody>
