--- a/src/views/users.ejs
+++ b/src/views/users.ejs
@@ -11,9 +11,9 @@
     <table class="table table-bordered">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Username</th>
+      <th class="text-center" scope="col">Name</th>
+      <th class="text-center" scope="col">Email</th>
+      <th class="text-center" scope="col">Username</th>
     </tr>
   </thead>
   <tbody>
