Changed logo action

--- a/src/views/partials/menu.ejs
+++ b/src/views/partials/menu.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">LOGO</a>
+      <a class="navbar-brand" href="/">QA Devices</a>
     </div>
     <div class="btn-group btn-group-justified">
       <div class="btn-group">
